# Wpi

./: README.md
.github/workflows/: cargo-audit.yml  ci.yml
Stellar-contracts-v1/: Cargo.toml  README.md  testnet_e2e_simulation.sh  wasm-size-baseline.json
Stellar-contracts-v1/mock-amm/: Cargo.toml
Stellar-contracts-v1/mock-amm/src/: lib.rs  usdc.rs
Stellar-contracts-v1/mock-usdc/: Cargo.toml
Stellar-contracts-v1/mock-usdc/src/: lib.rs
Stellar-contracts-v1/scripts/: quickstart.sh
Stellar-contracts-v1/soroban-token-common/: Cargo.toml
Stellar-contracts-v1/soroban-token-common/src/: lib.rs
Stellar-contracts-v1/wpi-token/: Cargo.toml
Stellar-contracts-v1/wpi-token/src/: lib.rs  test  test.rs
attestations/: ATTESTOR_PUBLIC_KEY  README.md  latest.json  sample.json  schema.json
attestations/history/: 2026-07-17T15-49-36-712Z.json
attestations/keys/retired/: .gitkeep
docs/: proof-of-reserve.md
docs/design/: on-chain-reserve-oracle.md
relayer/: .env.example  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
relayer/docs/: e2e-testnet-demo.md
relayer/scripts/: e2e-demo.ts
relayer/src/: config.ts  index.ts  log.ts  orchestrator.ts  types.ts
relayer/src/pi/: depositWatcher.ts  dryRunPiPayoutClient.ts  horizonPiClient.ts  horizonPiPayoutClient.ts  mockPiPayoutClient.ts  piClient.ts  piPayoutClient.ts
relayer/src/stellar/: dryRunWpiContractClient.ts  mintSubmitter.ts  redemptionWatcher.ts  sorobanWpiContractClient.ts  wpiContractClient.ts
relayer/test/: amount.test.ts  config.test.ts  depositId.test.ts  depositWatcher.test.ts  mintSubmitter.test.ts  redemptionWatcher.test.ts  store.test.ts
scripts/: update_wasm_baseline.sh
scripts/por/: attest.mjs  verify.mjs
(+7 files in other folders)
