[package]
name = "mock-amm"
version = "0.1.0"
edition = "2021"
description = "Test AMM for wPi -> real USDC SAC swaps in the decentralized reserve bridge."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "=23.0.1" }

[dev-dependencies]
soroban-sdk = { version = "=23.0.1", features = ["testutils"] }
