[package]
name = "mock-usdc"
version = "0.1.0"
edition = "2021"
description = "Mock USDC Soroban token for Stellar testnet simulations (not real USDC)."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "=23.0.1" }

[dev-dependencies]
soroban-sdk = { version = "=23.0.1", features = ["testutils"] }
